--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 </head>
 
 <body>
+
+ <div class="container">
+      <header>
+            <nav>
+                <img src=https://assets-global.website-files.com/5cd091cfb5499f22bdf72905/5dcda59e63bb6ae5c9282801_small-red-logo.png>
+                <a href="#">Home</a>
+                <a href="about.html">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>
+      </header>
+ </div class="container>
     <div class="container">
    
         <section class="top-content">
