changed image in header to provided jpg

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
             </nav>
-            <img class="highway" src=https://assets.climatecentral.org/images/made/7_30_17_Guardian_traffic_lights_1050_725_s_c1_c_c.jpg>
+            <img class="highway" src=assets/jumbo.jpg>
       </header>
  <!-- </div class="container> -->
     <div class="container">
