--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+   
  <!-- <div class="container"> -->
       <header class="header">
             <nav>
@@ -23,9 +23,12 @@
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
             </nav>
-            <img class="highway" src=assets/jumbo.jpg>
+            
       </header>
+      <img class="highway" src=assets/jumbo.jpg>
  <!-- </div class="container> -->
+
+
     <div class="container">
    
         <section class="top-content">
@@ -84,6 +87,6 @@
                 <a href="#">Contact</a>
             </nav>
         </footer>
-    </div><!-- container -->        
+    </><!-- container -->        
 </body>
 </html>
